--- a/css/base.css
+++ b/css/base.css
@@ -209,7 +209,7 @@ footer {
     padding-left: .5em;
 }
 
-h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .headerlink, h5:hover .headerlink, h6:hover .headerlink{
+h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .headerlink, h5:hover .headerlink, h6:hover .headerlink {
     display:inline-block;
 }
 
@@ -310,4 +310,9 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
         left: -100%;
         margin-left: 10px;
     }
+}
+
+@media print {
+    /* Remove sidebar when print */
+    .col-md-3 { display: none; }
 }
